fixed Members spacing

--- a/style.css
+++ b/style.css
@@ -1433,6 +1433,28 @@ margin-left: 60px;
   width: 200px;
 }
 
+.resource6{
+  width: 250px;
+}
+
+.resource5{
+  width: 250px;
+}
+
+.resource4{
+  width: 250px;
+}
+
+.resource3{
+  width: 250px;
+}
+
+.resource2{
+  width: 400px;
+}
+.resource1{
+  width: 400px;
+}
 
 .swirls img{
   display: block;
